Lint errors fixed and no more debug on watchface